# python-beginner

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.docker/python/: Dockerfile
workspace/: requirements.txt
workspace/1_basic/: 10_format_specifiers.py  11_1_while_loop.py  11_1_while_loop_exercise_1.py  11_1_while_loop_exercise_2.py  11_2_for_loop.py  11_2_for_loop_exercise_1.py  11_3_1_nested_loop.py  11_3_nested_loop.py  12_2d_collection.py  12_2d_collection_exercise_1.py  12_collection_1_list.py  12_collection_2_set.py  12_collection_3_tuple.py  12_collection_dictionary.py  12_collection_dictionary_exercise_1.py  12_collection_exercise_1.py  13_random_numbers.py  13_random_numbers_exercise_1.py  13_random_numbers_exercise_2.py  13_random_numbers_exercise_3.py  14_function.py  14_function_arbitrary.py  14_function_arbitrary_exercise_1.py  14_function_default_argument.py  14_function_keyword_argument.py  14_function_return.py  15_iterables.py  16_membership_operator.py  17_list_comprehension.py  18_match_case_statement.py  19_variable_scope.py  1_variables.py  2_typecasting.py  3_input.py  4_arithmatice_math_basic.py  4_arithmatice_math_builtin.py  4_arithmatice_math_exercise-1.py  4_arithmatice_math_exercise-2.py  4_arithmatice_math_module.py  5_if_statement.py  (+15 more)
workspace/2_dsa/: 10_recursion.py  11_1_sorting_algorithms_bubble.py  11_2_sorting_algorithms_insertion.py  11_3_sorting_algorithms_merge.py  11_4_sorting_algorithms_quick.py  11_5_sorting_algorithms_shell.py  11_6_sorting_algorithms_selection.py  1_modules.py  2_lambdas.py  3_iterator.py  3_iterator_create.py  4_regular_expression.py  5_array.py  5_array_numPy.py  6_linked_list.py  6_linked_list_new.py  7_hash_distribution_client.py  7_hash_table.py  8_heap_max.py  8_heap_min.py  8_queues.py  8_stacks.py  9_binary_search_tree.py  custom_hash_func.py  custom_hash_table.py  dunder_name1.py  dunder_name2.py  exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  hash_distribution.py  test_custom_hash_table.py  wordlist.py
workspace/3_oops/: 10_exception.py  11_1_file_detection.py  11_2_file_writing.py  11_3_file_read.py  12_datetime.py  1_oops.py  2_class_variables.py  3_1_inheritance.py  3_2_multiple_inheritance.py  3_3_multilevel_inheritance.py  3_4_super.py  4_1_Inheritance_polymorphism.py  4_2_Duck_typing_polymorphism.py  5_static_methods.py  6_class_method.py  7_magic(dunder)_method.py  8_@property.py  9_decorator.py  car.py  exercise_datetime.py  output.csv  output.json  output.txt  test.txt
workspace/4_concurrency/: 1_multithreading.py  2_0_multiprocessing.py  2_1_queue_multiprocessing.py  2_2_pool_multiprocessing.py  3_1_asynchrony_requests.py  3_asynchrony.py  3_asynchrony_1.py  3_asynchrony_2.py  3_asynchrony_3_requests_async.py  3_asynchrony_3_requests_sync.py  3_asynchrony_future.py  3_asynchrony_reading_file_async.py  3_asynchrony_reading_file_sync.py  4_gil.py  4_gil_multiprocess.py  exercise_multiprocessing_1.py
workspace/5_package_managers/: 1_generator_expressions.py  2_paradigms.py  test.txt  (+1 more)
workspace/8_testing/doctest/math_utils_api/: README.md  pyproject.toml
workspace/8_testing/doctest/math_utils_api/app/: __init__.py  api.py  calculator.py
workspace/8_testing/doctest/math_utils_api/tests/: test_api.py  test_calculator.py
workspace/8_testing/nose/math_utils/: README.md  pyproject.toml
workspace/8_testing/nose/math_utils_api/: README.md  pyproject.toml
workspace/8_testing/nose/math_utils_api/app/: __init__.py  calculator.py
workspace/8_testing/nose/math_utils_api/tests/: test_api.py  test_calculator.py
workspace/8_testing/tox/math_utils/: README.md  pyproject.toml
workspace/8_testing/tox/math_utils/tests/: test_calculator.py
workspace/8_testing/tox/math_utils_api/: README.md  pyproject.toml  requirements.txt
workspace/8_testing/tox/math_utils_api/app/: api.py
workspace/8_testing/tox/math_utils_api/tests/: test_api.py  test_calculator.py
(+293 files in other folders)
