[project]
name = "math_utils"
version = "0.1.0"
description = "A simple math library"
authors = [{ name = "Jay Gaha", email = "jaygaha@gmail.com" }]
readme = "README.md"
dependencies = ["flask>=2.0.0"]

[project.optional-dependencies]
test = ["nose2>=0.12.0", "requests>=2.28.0", "flake8>=5.0.0"]

[tool.tox]
legacy_tox_ini = """
[testenv]
deps =
    reqsmin: requests==2.28.0
    reqslatest: requests>=2.31.0
    nose2>=0.12.0
    flask>=2.0.0
commands = nose2 -v tests

[testenv:lint]
deps = flake8>=5.0.0
commands = flake8 app/ tests/
"""
