[project]
name = "math_utils_api"
version = "0.1.0"
description = "A simple math library API"
authors = [
    {name = "Jay Gaha", email = "jaygaha@gmail.com"}
]
readme = "README.md"
dependencies = ["flask>=2.0.0"]
[project.optional-dependencies]
test = ["pytest>=7.0.0", "requests>=2.28.0", "flake8>=5.0.0"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310,311}-{reqsmin,reqslatest},lint,coverage
isolated_build = true
skip_missing_interpreters = true

[testenv]
deps =
    reqsmin: requests==2.28.0
    reqslatest: requests>=2.31.0
    pytest>=7.0.0
    pytest-cov
    flask>=2.0.0
commands = pytest tests/ -v

[testenv:lint]
deps =
    flake8>=5.0.0
    black
    isort
commands =
    flake8 app/ tests/
    black --check app/ tests/
    isort --check-only app/ tests/

[testenv:coverage]
deps =
    pytest>=7.0.0
    pytest-cov
    flask>=2.0.0
commands =
    pytest tests/ --cov=app --cov-report=html --cov-report=term

[testenv:format]
deps =
    black
    isort
commands =
    black app/ tests/
    isort app/ tests/
"""
